--- a/CriminalIntent/res/layout/list_item_crime.xml
+++ b/CriminalIntent/res/layout/list_item_crime.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <CheckBox
         android:id="@+id/crime_list_item_solvedCheckBox"
@@ -9,12 +9,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:enabled="false"
+        android:focusable="false"
         android:gravity="center"
         android:padding="4dp" />
 
     <TextView
         android:id="@+id/crime_list_item_titleTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/crime_list_item_solvedCheckBox"
         android:paddingLeft="4dp"
@@ -24,7 +25,7 @@
 
     <TextView
         android:id="@+id/crime_list_item_dateTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/crime_list_item_titleTextView"
         android:layout_toLeftOf="@id/crime_list_item_solvedCheckBox"
