--- a/CriminalIntent/res/layout/fragment_crime.xml
+++ b/CriminalIntent/res/layout/fragment_crime.xml
@@ -28,6 +28,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp" />
+    
+    <Button
+        android:id="@+id/crime_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="set time" />
 
     <CheckBox
         android:id="@+id/crime_solved"
