--- a/CriminalIntent/res/layout/fragment_crime.xml
+++ b/CriminalIntent/res/layout/fragment_crime.xml
@@ -9,14 +9,22 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:baselineAligned="false" >
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
             android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/crime_imageView"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@android:color/darker_gray"
+                android:cropToPadding="true"
+                android:scaleType="centerInside" />
 
             <ImageButton
                 android:id="@+id/crime_imageButton"
